Fix WCAG 2.4.7: Contact form submit button focus visibility
Contact form submit button had a near-black background and blue focus outline.
The low contrast made active state not easily visible.

This changes the submit button to the same background orange, white font color,
and font size as header nav links, which we know are accessible.

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,10 @@
     @apply focus:outline-blue-500;
   }
 
+  button {
+    @apply cursor-pointer items-center rounded-md font-bold bg-[#f96302] px-4 py-2 text-white hover:bg-gray-800 disabled:opacity-60 disabled:bg-gray-800 disabled:cursor-not-allowed;
+  }
+
   table {
     @apply mt-8 table-auto w-full border-collapse;
   }
